[package]
name = "serenity-commands"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

    [package.metadata.docs.rs]
    all-features = true
    rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serenity-commands-macros.workspace = true

serenity.workspace = true
thiserror = "1"

[dev-dependencies]
serenity = { workspace = true, default-features = true }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }


[lints]
workspace = true

[workspace]
resolver = "2"

default-members = [".", "macros"]
members = [".", "macros"]

    [workspace.package]
    authors = ["Vidhan Bhatt <me@vidhan.io>"]
    description = "A library for creating/parsing Serenity slash commands."
    edition = "2021"
    homepage = "https://github.com/vidhanio/serenity-commands"
    license = "MIT"
    readme = "README.md"
    repository = "https://github.com/vidhanio/serenity-commands"
    version = "0.5.0"

    [workspace.dependencies]
    serenity-commands-macros = { version = "0.5", path = "macros" }

    serenity = { version = "0.12", default-features = false, features = [
        "builder",
    ] }

    [workspace.lints]
        [workspace.lints.rust]
        missing_copy_implementations = "warn"
        missing_debug_implementations = "warn"
        missing_docs = "warn"
        unsafe_code = "forbid"

        [workspace.lints.clippy]
        nursery = "warn"
        pedantic = "warn"
